--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,5 @@
 /* _Start Custom Containers_ */
+
 .container {
   padding: 0 0.75rem;
   margin: auto;
@@ -143,9 +144,11 @@
     font-size: 16px;
     text-decoration: none;
     display: inline-block;
+    transition: ease 0.3s;
+    overflow: hidden;
     &::after{
-      content: "";
-      position: absolute;
+      content: ""; 
+      position: absolute; 
       width: 0;
       height: 0;
       bottom: -1px;
@@ -166,6 +169,7 @@
         left: -2rem;
         background-color: #ffff ;
         opacity: 0.4;
+        
       }
      
   }
